--- a/.htaccess
+++ b/.htaccess
@@ -15,12 +15,12 @@ RewriteRule ^ %1/ [R=301,L]
 </Files>
 
 # Protect application and system files from being viewed
-RewriteRule ^(?:application|modules|system)\b.* App.php [L]
+RewriteRule ^(?:application|modules|system)\b.* index.php [L]
 
 # Allow any files or directories that exist to be displayed directly
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
-# Rewrite all other URLs to App.php/URL
-RewriteRule .* App.php [PT]
-Redirect /calabash/*.* /calabash/App.php
+# Rewrite all other URLs to index.php/URL
+RewriteRule .* index.php [PT]
+Redirect /calabash/*.* /calabash/index.php
