--- a/.htaccess
+++ b/.htaccess
@@ -4,15 +4,21 @@ RewriteEngine On
 # Installation directory
 RewriteBase /calabash/
 
-# To externally redirect /dir/foo.php to /dir/foo
-RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.php [NC]
-RewriteRule ^ %1/ [R=301,L]
-
 # Protect hidden files from being viewed
 <Files .*>
     Order Deny,Allow
     Deny From All
 </Files>
+
+# Protect other project files in the root folder
+<FilesMatch "composer.json|composer.lock|LICENSE|README.md">
+    Order Deny,Allow
+    Deny From All
+</FilesMatch>
+
+# To externally redirect /dir/foo.php to /dir/foo
+RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.php [NC]
+RewriteRule ^ %1/ [R=301,L]
 
 # Protect application and system files from being viewed
 RewriteRule ^(?:application|modules|system)\b.* index.php [L]
