--- a/.htaccess
+++ b/.htaccess
@@ -1,32 +1,19 @@
 # Turn on URL rewriting
 RewriteEngine On
 
+# Turn rewriting on
+Options +FollowSymLinks
+
 # Installation directory
 RewriteBase /calabash/
 
-# Protect hidden files from being viewed
-<Files .*>
-    Order Deny,Allow
-    Deny From All
-</Files>
-
-# Protect other project files in the root folder
-<FilesMatch "composer.json|composer.lock|LICENSE|README.md">
-    Order Deny,Allow
-    Deny From All
-</FilesMatch>
-
-# To externally redirect /dir/foo.php to /dir/foo
-RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.php [NC]
-RewriteRule ^ %1/ [R=301,L]
-
-# Protect application and system files from being viewed
-RewriteRule ^(?:application|modules|system)\b.* index.php [L]
-
-# Allow any files or directories that exist to be displayed directly
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-
-# Rewrite all other URLs to index.php/URL
-RewriteRule .* index.php [PT]
-Redirect /calabash/*.* /calabash/index.php
+# Redirect requests to index.php
+RewriteCond %{REQUEST_URI} !=/calabash/index.php
+RewriteCond %{REQUEST_URI} !.*\.png$ [NC]
+RewriteCond %{REQUEST_URI} !.*\.jpg$ [NC]
+RewriteCond %{REQUEST_URI} !.*\.jpeg$ [NC]
+RewriteCond %{REQUEST_URI} !.*\.gif$ [NC]
+RewriteCond %{REQUEST_URI} !.*\.ico$ [NC]
+RewriteCond %{REQUEST_URI} !.*\.css$ [NC]
+RewriteCond %{REQUEST_URI} !.*\.js$ [NC]
+RewriteRule .* /calabash/index.php
