--- a/.htaccess
+++ b/.htaccess
@@ -9,11 +9,5 @@ RewriteBase /calabash/
 
 # Redirect requests to index.php
 RewriteCond %{REQUEST_URI} !=/calabash/index.php
-RewriteCond %{REQUEST_URI} !.*\.png$ [NC]
-RewriteCond %{REQUEST_URI} !.*\.jpg$ [NC]
-RewriteCond %{REQUEST_URI} !.*\.jpeg$ [NC]
-RewriteCond %{REQUEST_URI} !.*\.gif$ [NC]
-RewriteCond %{REQUEST_URI} !.*\.ico$ [NC]
-RewriteCond %{REQUEST_URI} !.*\.css$ [NC]
-RewriteCond %{REQUEST_URI} !.*\.js$ [NC]
+RewriteCond %{REQUEST_URI} !.*\.(png|jpg|jpeg|gif|ico|css|js)$ [NC]
 RewriteRule .* /calabash/index.php
