Changed index.php to App.php

--- a/.htaccess
+++ b/.htaccess
@@ -7,7 +7,7 @@ Options +FollowSymLinks
 # Installation directory
 RewriteBase /calabash/
 
-# Redirect requests to index.php
-RewriteCond %{REQUEST_URI} !=/calabash/index.php
+# Redirect requests to App.php
+RewriteCond %{REQUEST_URI} !=/calabash/App.php
 RewriteCond %{REQUEST_URI} !.*\.(png|jpg|jpeg|gif|ico|bmp|svg|webp|avi|m4v|mov|mp4|mpeg|ogv|qt|webm|wmv|aac|m4a|mp3|oga|ogg|wav|wave|css|js|ts)$ [NC]
-RewriteRule .* /calabash/index.php
+RewriteRule .* /calabash/App.php
