Added compatibility with in-build PHP server

--- a/.htaccess
+++ b/.htaccess
@@ -5,9 +5,9 @@ RewriteEngine On
 Options +FollowSymLinks
 
 # Installation directory
-RewriteBase /calabash/
+RewriteBase /
 
-# Redirect requests to App.php
-RewriteCond %{REQUEST_URI} !=/calabash/App.php
+# Redirect requests to index.php
+RewriteCond %{REQUEST_URI} !=index.php
 RewriteCond %{REQUEST_URI} !.*\.(png|jpg|jpeg|gif|ico|bmp|svg|webp|avi|m4v|mov|mp4|mpeg|ogv|qt|webm|wmv|aac|m4a|mp3|oga|ogg|wav|wave|css|js|ts)$ [NC]
-RewriteRule .* /calabash/App.php
+RewriteRule .* index.php
